<resources>
    <string name="app_name">Quiz</string>
    <string name="q1_wrong_a1">Jerry Bruckheimer</string>
    <string name="q1_wrong_a2">Joachim Ronning</string>
    <string name="q1_right_a3">Gore Verbinski</string>
    <string name="q1_wrong_a4">Rob Marshall</string>
    <string name="q2_wrong_a1">10</string>
    <string name="q2_right_a2">13</string>
    <string name="q2_wrong_a3">15</string>
    <string name="q2_wrong_a4">20</string>
    <string name="q4_wrong_a1">Queen Anne\'s Revenge</string>
    <string name="q4_wrong_a2">Silent Mary</string>
    <string name="q4_wrong_a3">Endeavour</string>
    <string name="q4_right_a4">Flying Dutchman</string>
    <string name="q4_wrong_a5">Interceptor</string>
    <string name="q4_right_a1">Queen Anne\'s Revenge</string>
    <string name="q4_wrong_a4">Flying Dutchman</string>
    <string name="q5_wrong_a1">French Empire</string>
    <string name="q5_right_a1">British Empire</string>
    <string name="q5_right_a3">Spanish Empire</string>
    <string name="q5_wrong_a4">Chinese Empire</string>
    <string name="q6_wrong_a1">West Indian Trading Company</string>
    <string name="q6_wrong_a2">East Indian Company</string>
    <string name="q6_wrong_a3">West Indian Company</string>
    <string name="q6_right_a4">East Indian Trading Company</string>
    <string name="q7_right_a1">Tai Huang</string>
    <string name="q7_wrong_a2">Chen Huang</string>
    <string name="q7_wrong_a3">Chin Han</string>
    <string name="q7_wrong_a4">Tai Wang</string>
    <string name="q8_wrong_a1">8 Pirate Lords from all the Eight Seas</string>
    <string name="q8_wrong_a2">8 Pirate Lords from all the Seven Seas</string>
    <string name="q8_right_a3">9 Pirate Lords from all the Seven Seas</string>
    <string name="q8_wrong_a4">9 Pirate Lords from all the Nine Seas</string>
    <string name="hint_for_q3">Legume</string>
    <string name="hint_for_q9">Ordinal Number</string>
    <string name="hint_for_q10">Film Title</string>
    <string name="q3_right">peanut</string>
    <string name="q9_right1">fourth</string>
    <string name="q9_right2">4th</string>
    <string name="q10_right">Dead Men Tell No Tales</string>
    <string name="submit_button">Submit</string>
    <string name="restart_button">Restart</string>
    <string name="question1">1. Who directed most of the movies?</string>
    <string name="question2">2. For how many years were I the captain of the Black Pearl by Davy Jones in exchange for 100 years of service aboard Jones\' ship?</string>
    <string name="question3">3. What did I eat in Davy Jones\' Locker?</string>
    <string name="question4">4. What is the name of the ship?</string>
    <string name="question5">5. Who ruled the world?</string>
    <string name="question6">6. What was the name of the company led by Lord Cutler Beckett?</string>
    <string name="question7">7. Who was the captain of Sao Feng\'s guards at the time of the rescue attempt for me?</string>
    <string name="question8">8. How many Pirate Lords were in the Brethren Court and from how many seas?</string>
    <string name="question9">9. After which Brethren Court did they free Calypso from her human bonds?</string>
    <string name="question10">10. What is the title of my last adventure in the USA?</string>
    <string name="toast_for_0_point">You don\'t have any good answer!</string>
    <string name="toast_for_1_point">Your score is 1 point out of 10. You can do it better!</string>
</resources>
